[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "strictdimgreyinstitutes"
version = "0.1.0"
[tool.poetry.dependencies]
pycryptodome= "^3.9.7"
pyOpenSSL ="^19.1.0"
python = "^3.7"
pyelliptic = "^1.5.8"
[tool.poetry.dev-dependencies]